# pubsub

./: .gitignore  Cargo.toml  README.md
api/: pubsub:template.os-v0.wit
proccesses/: metadata.json
proccesses/pub/: Cargo.toml
processes/: .gitignore  Cargo.toml  README.md
processes/pkg/: manifest.json  pub.wasm  sub.wasm
processes/pub/: Cargo.toml
processes/pub/src/: lib.rs
processes/sub/: Cargo.toml
processes/sub/src/: lib.rs
pub/: Cargo.toml
pub/src/: history.rs  lib.rs  pubsub.rs
src/: binary_helpers.rs  history.rs  lib.rs  pubsub.rs
sub/: Cargo.toml
sub/src/: lib.rs  pubsub.rs
wit-api/: pubsub-v0.wit  pubsub:template.os-v0.wit
