[package]
name = "kinode_pubsub"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "processes/pkg/**/*",
]

[dependencies]
anyhow = "1.0.89"
kinode_process_lib = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2-const = "0.1.2"
process_macros = { git = "https://github.com/kinode-dao/process_macros", rev = "626e501" }
wit-bindgen = "0.24.0"
